deployment/deployment_go_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: docker.io/germanp34e/go-app:latest
        ports:
        - name: web  
          containerPort: 8000
---


apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-go
spec:
  stripPrefix:
    prefixes:
      - /go

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/go`)
      kind: Rule
      priority: 1
      middlewares:
        - name: stripprefix-go
      services:
          - name: go-app-service
            port: 8000
