deployment/deployment_python_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: docker.io/germanp34e/python-app:latest
        ports:
        - name: web  
          containerPort: 5000
---


apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-python
spec:
  stripPrefix:
    prefixes:
      - /python
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: python-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/python`)
      kind: Rule
      priority: 1
      middlewares:
        - name: stripprefix-python
      services:
          - name: python-app-service
            port: 5000
