deployment/deployment_ringo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ringo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ringo
  template:
    metadata:
      labels:
        app: ringo
    spec:
      containers:
      - name: ringo
        image: docker.io/germanp34e/ringo:latest
        ports:
        - name: web  
          containerPort: 7000
---


apiVersion: v1
kind: Service
metadata:
  name: ringo-service
spec:
  selector:
    app: ringo
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-ringo
spec:
  stripPrefix:
    prefixes:
      - /ringo

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ringo-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/ringo`)
      kind: Rule
      priority: 1
      middlewares:
        - name: stripprefix-ringo
      services:
          - name: ringo-service
            port: 7000
